# sample-serverless-llama-server

./: README.md  client.py  template.yaml
LlamaCppServer/: Makefile  run.sh
LlamaServer/: Dockerfile  Makefile  README.md  run.sh
client/: README.md  requirements.txt
s3mem-run/: Cargo.toml  Dockerfile  Makefile  README.md
s3mem-run/src/: main.rs
