[package]
name = "s3mem-run"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.5", default-features = false, features = ["rt-tokio"] }
aws-sdk-s3 = { version = "1.74", default-features = false, features = ["rustls"] }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "macros", "io-util"] }
futures = "0.3"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"  # Use abort instead of unwind for panics
debug = false
